--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -104,43 +104,17 @@
         app:layout_constraintTop_toBottomOf="@+id/taskName" />
 
     <TextView
-        android:id="@+id/days"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/timeRemaining"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
-        app:layout_constraintEnd_toStartOf="@+id/hours"
-        app:layout_constraintTop_toBottomOf="@+id/taskRequirementInteger" />
-
-    <TextView
-        android:id="@+id/hours"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toStartOf="@+id/minutes"
-        app:layout_constraintTop_toBottomOf="@+id/taskRequirementInteger" />
-
-    <TextView
-        android:id="@+id/minutes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toStartOf="@+id/seconds"
-        app:layout_constraintTop_toBottomOf="@+id/taskRequirementString" />
-
-    <TextView
-        android:id="@+id/seconds"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/taskLevelInteger"
         app:layout_constraintTop_toBottomOf="@+id/taskRequirementString" />
 
 </android.support.constraint.ConstraintLayout>
