--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -104,7 +104,7 @@
         app:layout_constraintTop_toBottomOf="@+id/taskName" />
 
     <TextView
-        android:id="@+id/timeRemaining"
+        android:id="@+id/Recommendations"
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_marginEnd="8dp"
