Allow user to input how much they did and the duration they did it for, this info is sent onto the journal
Need to
- tidy up everything
- write up exercises, meditations and stretches
- do something with the main page

--- a/app/src/main/res/layout/activity_complete_or_fail.xml
+++ b/app/src/main/res/layout/activity_complete_or_fail.xml
@@ -10,21 +10,67 @@
         android:id="@+id/Fail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="8dp"
-        android:text="Fail"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="74dp"
+        android:text="Give Up"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TaskPopUpInfo" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/Complete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="50dp"
-        android:layout_marginTop="8dp"
-        android:text="Complete"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="74dp"
+        android:text="Submit Progress"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TaskPopUpInfo" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/NumberInput"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="164dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/DurationInput"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/NumberInput" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="48dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="177dp"
+        android:text="Progress made:"
+        app:layout_constraintEnd_toStartOf="@+id/NumberInput"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="34dp"
+        android:text="Time spent (Minutes):"
+        app:layout_constraintEnd_toStartOf="@+id/DurationInput"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 
 </android.support.constraint.ConstraintLayout>
