--- a/app/src/main/res/layout/activity_complete_or_fail.xml
+++ b/app/src/main/res/layout/activity_complete_or_fail.xml
@@ -28,7 +28,7 @@
 
     <EditText
         android:id="@+id/NumberInput"
-        android:layout_width="wrap_content"
+        android:layout_width="107dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="164dp"
@@ -39,7 +39,7 @@
 
     <EditText
         android:id="@+id/DurationInput"
-        android:layout_width="wrap_content"
+        android:layout_width="107dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
@@ -54,8 +54,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="48dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="177dp"
+        android:layout_marginTop="170dp"
         android:text="Progress made:"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="15dp"
         app:layout_constraintEnd_toStartOf="@+id/NumberInput"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -66,9 +68,12 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="19dp"
         android:text="Time spent (Minutes):"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="15dp"
         app:layout_constraintEnd_toStartOf="@+id/DurationInput"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
